--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "♛꧁༒☾FELICIAN☽༒꧂♛",
   "version": "10.8.1",
   "description": "♛꧁༒☾FELICIAN☽༒꧂♛",
-  "main": "index.js",
+  "main": "xmd_index.js",
   "type": "module",
   "scripts": {
     "start": "pm2 start index.js --deep-monitoring --attach --name ♛꧁༒☾FELICIAN☽༒꧂♛",
