--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
-  "name": "♛꧁༒☾FELICIAN☽༒꧂♛",
+  "name": "༒☾FELICIAN☽༒",
   "version": "10.8.1",
-  "description": "♛꧁༒☾FELICIAN☽༒꧂♛",
+  "description": "༒☾FELICIAN☽༒",
   "main": "xmd_index.js",
   "type": "module",
   "scripts": {
-    "start": "pm2 start index.js --deep-monitoring --attach --name ♛꧁༒☾FELICIAN☽༒꧂♛",
-    "stop": "pm2 stop  ♛꧁༒☾FELICIAN☽༒꧂♛",
-    "restart": "pm2 restart  ♛꧁༒☾FELICIAN☽༒꧂♛"
+    "start": "pm2 start index.js --deep-monitoring --attach --name ༒☾FELICIAN☽༒",
+    "stop": "pm2 stop Raheem-cm",
+    "restart": "pm2 restart Raheem-cm",
+    "build": "echo 'No build step configured'",
+    "test": "echo '✔️ Bot runs fine — no test yet'"
   },
-  "keywords": ["♛꧁༒☾FELICIAN☽༒꧂♛", "whatsapp-bot", "whatsapp md bot"],
-  "author": "♛꧁༒☾FELICIAN☽༒꧂♛",
+  "keywords": ["꧁༒☾FELICIAN☽༒꧂", "whatsapp-bot", "whatsapp md bot"],
+  "author": "꧁༒☾FELICIAN☽༒꧂",
   "license": "ISC",
   "dependencies": {
     "@whiskeysockets/baileys": "npm:@fizzxydev/baileys-pro@8.5.12",
@@ -65,4 +67,3 @@
     "wasitech": "npm:@distube/ytdl-core",
     "yt-search": "^2.11.0"
   }
-}
