--- a/app.json
+++ b/app.json
@@ -20,7 +20,7 @@
     "OWNER_NAME": {
       "description": "Your name as the bot owner",
       "required": true,
-      "value": "꧁༒☾FELICIAN☽༒꧂"
+      "value": "SKIDDXDM"
     },
     "OWNER_NUMBER": {
       "description": "Your WhatsApp number",
