--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "name": "SKIDDXDM",
   "description": "🚀 SKIDDXDM WhatsApp MultiDevice Bot – BY SKIDDXDM 💡✨",
-  "logo": "https://files.catbox.moe/vgb4cw.jpg",
+  "logo": "https://files.catbox.moe/uf8r83.jpg",
   "keywords": ["SKIDDXDM", "whatsapp-bot", "whatsapp-md-bot"],
   "repository": "https://github.com/fel255/skiddxdm",
   "stack": "container",
