--- a/.env
+++ b/.env
@@ -3,17 +3,17 @@
 
 
 
-SESSION_ID="RAHEEM~XMD-2~"
+SESSION_ID="SKIDDY"
 AUTO_READ_STATUS=true
-STATUS_READ_MSG="*🐳Status Seen By RAHEEM-XMD-2 ⚡*"
+STATUS_READ_MSG="*🐳Status Seen By SKIDDXDM ⚡*"
 AUTO_STATUS_REPLY=false
 AUTO_REJECT_CALLS=false
 MODE="public"
 WELCOME=false
 AUTO_READ_MESSAGES=false
 AUTO_TYPING=false
-OWNER_NAME="RAHEEM-CM"
-OWNER_NUMBER="255763111390"
+OWNER_NAME="SKIDDXDM"
+OWNER_NUMBER="255768091936"
 AUTO_RECORDING=false
 ALWAYS_ONLINE=false
 AUTO_BLOCK=true
